--- a/styles/index.css
+++ b/styles/index.css
@@ -25,6 +25,11 @@ h3 {
     line-height: 7px;
 }
 
+p {
+    font-family: "MuseoSlab500";
+    font-size: 14px;
+}
+
 input[type=button] {
     cursor: pointer;
     background: black;
@@ -62,6 +67,7 @@ html, body {
     position: absolute;
     margin-top: 100px;
     border: 3px solid black;
+    background: white;
     padding: 15px;
 }
 
@@ -87,4 +93,43 @@ html, body {
     image-rendering: -webkit-optimize-contrast;
     image-rendering: crisp-edges;
     -ms-interpolation-mode: nearest-neighbor;
+}
+
+#modalBtn {
+    display: none;
+}
+
+.modal {
+    display: none; 
+    position: fixed;
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 3px solid black;
+    width: 40%;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
